--- a/src/App.css
+++ b/src/App.css
@@ -4,30 +4,17 @@
   width: 100%;
 }
 
-.app-label{
-  width: 50%;
-  overflow: auto;
-  margin: auto;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 2;
-  background: white;
-  pointer-events: none;
-}
-
-.map-container{
+.map-container {
   height: 100vh;
   width: 100%;
 }
 
-.clicked-coord-label{
+.feature-data-display {
   position: absolute;
   right: 0;
   bottom: 0;
-  background: white;
-  border-radius: 5px;
+  padding: 0 16px;
+  background: #5fb25f;
 }
 
 .clicked-coord-label p {
